--- a/.github/workflows/main_bone-hammer-api.yml
+++ b/.github/workflows/main_bone-hammer-api.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - Bone-Hammer-api
+name: Build and deploy ASP.Net Core app to Azure Web App - bone-hammer-api
 
 on:
   push:
@@ -51,7 +51,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'Bone-Hammer-api'
+          app-name: 'bone-hammer-api'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A249AA67A15D47CBBD400B7969464923 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_DC54F0620D3B4DF881F55FC20F526E30 }}
           package: .
